# wrapscan-registry

./: .gitignore  Cargo.toml  README.md  docker-compose.yml  package.json  serverless.yml
gateway/rust/gateway_service/: Cargo.toml
gateway/rust/gateway_service/src/: constants.rs  debugging.rs  dynamodb.rs  extract_package_and_version.rs  get_username_package_and_version.rs  lib.rs  local_db.rs  main.rs  models.rs  package_name.rs  setup_routes.rs  username.rs  wrap_uri.rs
gateway/rust/gateway_service/src/accounts/: account_service.rs  allow_all_account_service.rs  remote_account_service.rs  single_account_service.rs
gateway/rust/gateway_service/src/db/: local_db.rs  (+2 more)
rust/gateway_service/: Cargo.toml
rust/gateway_service/src/: account_service.rs  allow_all_account_service.rs  constants.rs  debug.rs  dynamodb.rs  extract_package_and_version.rs  get_username_package_and_version.rs  lib.rs  local_db.rs  main.rs  models.rs  package_name.rs  remote_account_service.rs  routes.rs  semver.rs  setup_local_db.rs  setup_logging.rs  single_account_service.rs  username.rs  validate_package_name.rs
rust/gateway_service/src/account_service/: allow_all_account_service.rs  mod.rs  remote_account_service.rs  single_account_service.rs
rust/gateway_service/src/functions/: publish.rs  resolve.rs
rust/gateway_service/src/publishing/: error.rs  mod.rs  publish_latest_version.rs  publish_package.rs
rust/gateway_service/src/resolving/: mod.rs  resolve_package.rs
rust/gateway_service/src/routes/: mod.rs  publish.rs  resolve.rs
rust/gateway_service/tests/: publish.rs  resolve.rs
(+34 files in other folders)
