[package]
name = "gateway_service"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.17.0", features = ["macros"] }
serde_json = "1.0"
serde_derive = "1.0.147"
serde = "1.0.147"
tokio-stream = "0.1.11"
serde_dynamodb = "0.9.0"
axum = "0.6.18"
tracing-subscriber = "0.3.17"
lambda_http = "0.8.0"
lambda_runtime = "0.8.0"
aws-sdk-dynamodb = "0.28.0"
env_logger = "0.10.0"
aws-config = "0.55.3"
async-trait = "0.1.68"
thiserror = "1.0.40"
regex = "1.8.4"
lazy_static = "1.4.0"

[dev-dependencies]
mockall = "0.11.4"